# Law_bot

./: .env  .gitignore  Decision Numbe1.docx  Decision Numbe2.docx  Decision Numbe3.docx  Decision Number.docx  Decision_8009_20250611_193612.docx  Decision_8081_20250611_144819.docx  Decision_8206_20250611_144512.docx  Decision_8243_20250612_101042.docx  Decision_8643_20250610_214132.docx  Decision_8845_20250612_103456.docx  Insurance_ Decision Number 11220.docx  Intern_Premanand.docx  gem.py  pyproject.toml
