[project]
name = "rishi-final-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.4.4",
    "aiohttp>=3.11.18",
    "beautifulsoup4>=4.13.4",
    "browserbase>=1.2.0",
    "chromadb>=0.6.3",
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.0",
    "fastapi[standard]>=0.115.12",
    "flask>=3.1.1",
    "google-genai>=1.13.0",
    "google-generativeai>=0.8.5",
    "groq>=0.24.0",
    "jinja2>=3.1.6",
    "langchain-text-splitters>=0.3.8",
    "langchain[google-genai]>=0.3.25",
    "langgraph>=0.4.1",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "mcp>=1.7.1",
    "playwright>=1.52.0",
    "pydantic>=2.11.4",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "tenacity>=9.1.2",
]
